k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signup-api
  labels:
    app: signup-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: signup-api
  template:
    metadata:
      labels:
        app: signup-api
    spec:
      containers:
        - name: signup-api
          image: DOCKER_HUB_USER/signup-api:latest
          ports:
            - containerPort: 3517
          readinessProbe:
            httpGet:
              path: /health
              port: 3517
            initialDelaySeconds: 60
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /health
              port: 3517
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 5
