k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signup-ui
  labels:
    app: signup-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: signup-ui
  template:
    metadata:
      labels:
        app: signup-ui
    spec:
      containers:
        - name: signup-ui
          image: DOCKER_HUB_USER/signup-ui:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
