k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signup-api-service
spec:
  selector:
    app: signup-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3517
  type: ClusterIP
