k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylocal-redis
spec:
  selector:
    app: mylocal-redis
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  type: ClusterIP
