k8s/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signup-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - signup.mylocal.ing
      secretName: mylocal-ingress-tls
  rules:
    - host: signup.mylocal.ing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signup-ui-service
                port:
                  number: 80
